established grpc connection for connection of nodes to the server